--- a/templates/add-review.html
+++ b/templates/add-review.html
@@ -17,7 +17,7 @@
         <div class="form-group">
             <img ng-init="avatar = Avatar.generate(review.author)" ng-src="{{avatar}}" />
             <label class="control-label" for="author">Email Address</label>
-            <input type="email" placeholder="Email Address" name="author" class="form-control" ng-model='newReview.author'></input>
+            <input type="email" placeholder="Email Address" name="author" class="form-control" ng-model='newReview.author'>
         </div>
-            <input type="submit" value="Add Review" class="btn btn-default" />
+            <input type="submit" value="Add Review" class="btn btn-default">
 </form>
