--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,1 +1,6 @@
-<h1>This is page 1</h1>
+<h1>Our Candidates</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi arcu, dignissim vitae vulputate eget, cursus a sem. Phasellus egestas tristique risus, in facilisis nulla porta ac. Sed laoreet augue felis, vel efficitur tortor pellentesque lobortis. Etiam ac ipsum semper, congue dolor eu, feugiat lectus. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at ligula imperdiet, blandit turpis sed, tempus elit. Etiam id vehicula nulla.
+
+Sed vel lacus scelerisque, facilisis lorem non, lobortis arcu. Praesent luctus neque nec dictum tincidunt. Pellentesque sollicitudin faucibus orci, a tempus magna pharetra et. Vivamus odio urna, tempor vitae sem non, elementum tristique risus. Duis in elit convallis, scelerisque dui a, elementum eros. Aliquam vitae sem sit amet nibh maximus hendrerit eget non nulla. Cras vitae ligula ornare, cursus leo ornare, aliquam ipsum. Pellentesque sagittis in arcu sed cursus.
+
+Nulla eget faucibus lectus. Vivamus in nisi nec nisi vulputate interdum. Integer vitae vehicula dui. Nam pellentesque accumsan turpis vel tempus. Aliquam efficitur nisl nec massa mollis, laoreet placerat ligula congue. In blandit vitae enim et dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
