--- a/templates/store-panels.html
+++ b/templates/store-panels.html
@@ -1,8 +1,8 @@
-<div id='panelDiv'>
+<div class = "well" id='panelDiv'>
     <div class="row">
         <span class="col-xs-4" ng-class=" {'active':tab ===1}"><a ng-click="selectTab(1)" href>Qualifications</a></span>
-        <span class="col-xs-4" ng-class=" {'active':tab ===2}"><a ng-click="selectTab(2)" href>My Projects</a></span>
-        <span class="col-xs-4" ng-class="{'active':tab ===3}"><a ng-click="selectTab(3)" href>My Reviews</a></span>
+        <span class="col-xs-4" ng-class=" {'active':tab ===2}"><a ng-click="selectTab(2)" href>Projects</a></span>
+        <span class="col-xs-4" ng-class="{'active':tab ===3}"><a ng-click="selectTab(3)" href>Reviews</a></span>
     </div>
 </div>
 <div class="panel" ng-show="tab === 1">
